Fixed layout bugs.

--- a/app/assets/styles/layout/_generic-content.scss
+++ b/app/assets/styles/layout/_generic-content.scss
@@ -16,6 +16,8 @@
     }
 
     &--padding-left {
-        padding-left: 2rem;
+        @include atSmall {
+            padding-left: 2rem;
+        }
     }
 }
