--- a/app/assets/styles/layout/_site-header.scss
+++ b/app/assets/styles/layout/_site-header.scss
@@ -2,7 +2,7 @@
     background-color: $black;
     font-family: $main-font-stack;
     color: #fff;
-    padding: 0 0 4rem;
+    padding: 2rem 0 4rem;
 
     @include atSmall {
         padding: 3.7rem 0 14rem;        
@@ -46,7 +46,7 @@
 
     &__title {
         color: $yellow;
-        font-size: 100px;
+        font-size: 90px;
         font-weight: 100;
         letter-spacing: 13px;
         line-height: 1.023;
